--- a/demos/src/alert-banner-error.mustache
+++ b/demos/src/alert-banner-error.mustache
@@ -1,18 +1,18 @@
-<div class="n-alert-banner" data-n-component="n-alert-banner">
-	<div class="n-alert-banner__outer n-alert-banner__outer--error">
-		<div class="n-alert-banner__inner n-alert-banner__inner--error" data-n-alert-banner-inner="">
-			<div class="n-alert-banner__content n-alert-banner__content--long n-alert-banner__content--error">
+<div class="n-alert-banner n-alert-banner--error" data-n-component="n-alert-banner">
+	<div class="n-alert-banner__outer">
+		<div class="n-alert-banner__inner" data-n-alert-banner-inner="">
+			<div class="n-alert-banner__content n-alert-banner__content--long">
 				<p><b>Something went wrong!</b> Please check and try again.</p>
 			</div>
-			<div class="n-alert-banner__content n-alert-banner__content--short n-alert-banner__content__icon--error">
+			<div class="n-alert-banner__content n-alert-banner__content--short">
 				<p>Please check and try again.</p>
 			</div>
 			<div class="n-alert-banner__actions">
 				<div class="n-alert-banner__action">
-					<a href="#" class="n-alert-banner__button n-alert-banner__button--error">Button</a>
+					<a href="#" class="n-alert-banner__button">Button</a>
 				</div>
 				<div class="n-alert-banner__action--secondary">
-					<a href="#" class="n-alert-banner__link n-alert-banner__link--error">Text link</a>
+					<a href="#" class="n-alert-banner__link">Text link</a>
 				</div>
 			</div>
 		</div>
