--- a/demos/src/alert-banner-success.mustache
+++ b/demos/src/alert-banner-success.mustache
@@ -1,18 +1,18 @@
-<div class="n-alert-banner" data-n-component="n-alert-banner">
-	<div class="n-alert-banner__outer n-alert-banner__outer--success">
-		<div class="n-alert-banner__inner n-alert-banner__inner--success" data-n-alert-banner-inner="">
-			<div class="n-alert-banner__content n-alert-banner__content--long n-alert-banner__content--success">
+<div class="n-alert-banner n-alert-banner--success" data-n-component="n-alert-banner">
+	<div class="n-alert-banner__outer">
+		<div class="n-alert-banner__inner" data-n-alert-banner-inner="">
+			<div class="n-alert-banner__content n-alert-banner__content--long">
 				<p><b>Well done!</b> You successfully completed this task.</p>
 			</div>
-			<div class="n-alert-banner__content n-alert-banner__content--short n-alert-banner__content__icon--success">
+			<div class="n-alert-banner__content n-alert-banner__content--short">
 				<p>You successfully completed this task.</p>
 			</div>
 			<div class="n-alert-banner__actions">
 				<div class="n-alert-banner__action">
-					<a href="#" class="n-alert-banner__button n-alert-banner__button--success">Button</a>
+					<a href="#" class="n-alert-banner__button">Button</a>
 				</div>
 				<div class="n-alert-banner__action--secondary">
-					<a href="#" class="n-alert-banner__link n-alert-banner__link--success">Text link</a>
+					<a href="#" class="n-alert-banner__link">Text link</a>
 				</div>
 			</div>
 		</div>
