--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,5 @@
-$_alert-banner-spacing: oTypographySpacingSize($units: 10) !default;
-$_alert-banner-close-button-size: 28 !default;
+$n-alert-banner-is-silent: true !default;
+
+$_n-alert-banner-themes: ('error', 'neutral', 'success');
+$_n-alert-banner-spacing: oTypographySpacingSize($units: 10) !default;
+$_n-alert-banner-close-button-size: 28 !default;
