Reduced repeated styling code

--- a/main.scss
+++ b/main.scss
@@ -11,6 +11,7 @@
 @import "src/scss/alert-banner/alert-banner-mixins";
 @import "src/scss/alert-banner/alert-banner";
 
+@import "src/scss/alert-banner/themes/mixins";
 @import "src/scss/alert-banner/themes/error/error-mixins";
 @import "src/scss/alert-banner/themes/error/error";
 @import "src/scss/alert-banner/themes/neutral/neutral-mixins";
