--- a/src/scss/alert-banner/themes/error/_error-mixins.scss
+++ b/src/scss/alert-banner/themes/error/_error-mixins.scss
@@ -1,56 +1,9 @@
-$errorBackgroundColor: oColorsMix('paper', 'crimson', 90);
-$errorTextColor: oColorsMix('black', 'crimson', 12.5);
-
-@mixin alertBannerOuterError {
-	background-color: $errorBackgroundColor;
-}
-
-@mixin alertBannerInnerError {
-	color: $errorTextColor;
-}
-
-@mixin alertBannerContentError {
+@mixin alertBannerContentError($errorBackgroundColor, $errorTextColor) {
 	&::before {
 		@include oIconsGetIcon('warning', $errorBackgroundColor, 20);
 		padding: 1px;
-		background-color: oColorsMix('black', 'crimson', 12.5);
+		background-color: $errorTextColor;
 		border-radius: 50%;
 		margin: 10px;
 	}
-}
-
-@mixin alertBannerButtonError {
-	@include oButtons($theme: secondary);
-	border: 1px solid ;
-	color: $errorTextColor;
-	background-color: $errorBackgroundColor;
-
-	&:not([disabled]):hover {
-		background-color: darken($errorBackgroundColor, 8);
-		color: $errorTextColor;
-		border-color: $errorTextColor;
-	}
-
-}
-
-@mixin alertBannerLinkError {
-	color: $errorTextColor;
-	text-decoration: none;
-	cursor: pointer;
-	border-bottom: 2px solid oColorsMix('paper', 'crimson', 50);
-
-	&:hover,
-	&:focus {
-		color: $errorTextColor;
-		border-bottom-color: $errorTextColor;
-	}
-
-	&:focus {
-		outline: 3px solid $errorTextColor;
-		border-bottom-color: transparent;
-	}
-}
-
-@mixin alertBannerCloseButtonError {
-	@include oIconsGetIcon('cross', $errorTextColor, $_n-alert-banner-close-button-size);
 }
