--- a/src/scss/alert-banner/themes/success/_success-mixins.scss
+++ b/src/scss/alert-banner/themes/success/_success-mixins.scss
@@ -1,53 +1,8 @@
-$successBackgroundColor: oColorsMix('paper', 'jade', 80);
-$successTextColor: oColorsMix('black', 'jade', 43);
-
-@mixin alertBannerOuterSuccess {
-	background-color: $successBackgroundColor;
-}
-
-@mixin alertBannerInnerSuccess {
-	color: $successTextColor;
-}
-
-@mixin alertBannerContentSuccess {
+@mixin alertBannerContentSuccess($successTextColor) {
 	&::before {
 		@include oIconsGetIcon('tick', $successTextColor, 20);
 		align-items: center;
 		padding: 10px;
 		white-space: nowrap;
 	}
-}
-
-@mixin alertBannerButtonSuccess {
-	border: solid 1px $successTextColor;
-	color: $successTextColor;
-
-	&:not([disabled]):hover {
-		background-color: darken($successBackgroundColor, 8);
-		color: $successTextColor;
-		border-color: $successTextColor;
-	}
-}
-
-@mixin alertBannerLinkSuccess {
-	color: $successTextColor;
-	text-decoration: none;
-	cursor: pointer;
-	border-bottom: 2px solid oColorsMix('paper', 'jade', 50);
-
-	&:hover,
-	&:focus {
-		color: $successTextColor;
-		border-bottom-color: $successTextColor;
-	}
-
-	&:focus {
-		outline: 3px solid $successTextColor;
-		border-bottom-color: transparent;
-	}
-}
-
-
-@mixin alertBannerCloseButtonSuccess {
-	@include oIconsGetIcon('cross', $successTextColor, $_n-alert-banner-close-button-size);
 }
