--- a/src/scss/alert-banner/theme-mixins.scss
+++ b/src/scss/alert-banner/theme-mixins.scss
@@ -1,14 +1,9 @@
 @mixin _nAlertBannerThemeMixins($theme, $class) {
-
 	@if $theme == 'error' {
 		@include nAlertBannerErrorMixins($class);
-	}
-
-	@else if $theme == 'success' {
+	} @else if $theme == 'success' {
 		@include nAlertBannerSuccessMixins($class);
-	}
-
-	@else if $theme == 'neutral' {
+	} @else if $theme == 'neutral' {
 		@include nAlertBannerNeutralMixins($class);
 	}
 }
