Adds functionality to attach alertBanner to FT navigation  🐿 v2.7.0

--- a/demos/src/alert-banner-error.mustache
+++ b/demos/src/alert-banner-error.mustache
@@ -1,4 +1,6 @@
-<div class="n-alert-banner n-alert-banner--error" data-n-component="n-alert-banner">
+<div id="site-navigation">FT HEADER</div>
+
+<div class="n-alert-banner n-alert-banner--error" data-n-component="n-alert-banner" data-n-alert-banner-attach-to-navigation="true">
 	<div class="n-alert-banner__outer">
 		<div class="n-alert-banner__inner" data-n-alert-banner-inner="">
 			<div class="n-alert-banner__content n-alert-banner__content--long">
