Uses only append and sets element to appendToElement  🐿 v2.7.0

--- a/demos/src/alert-banner-build.mustache
+++ b/demos/src/alert-banner-build.mustache
@@ -1,3 +1,5 @@
+<div id="site-navigation">FT HEADER</div>
+
 <div class="button">
 	<button class="demo-alert-banner" id="alert-banner-error-button">Error</button>
 	<button class="demo-alert-banner" id="alert-banner-neutral-button">Netural</button>
