--- a/demos/src/alert-banner-error.mustache
+++ b/demos/src/alert-banner-error.mustache
@@ -1,6 +1,8 @@
-<div class="n-alert-banner n-alert-banner--error" data-n-component="n-alert-banner">
+<div id="site-navigation">FT HEADER</div>
+
+<div class="n-alert-banner n-alert-banner--error" data-n-component="n-alert-banner" data-n-alert-banner-attach-to-navigation="true" data-n-alert-banner-close-button="false">
 	<div class="n-alert-banner__outer">
-		<div class="n-alert-banner__inner" data-n-alert-banner-inner="" data-n-alert-banner-close-button="false">
+		<div class="n-alert-banner__inner" data-n-alert-banner-inner="">
 			<div class="n-alert-banner__content n-alert-banner__content--long">
 				<p><b>Something went wrong!</b> Please check and try again.</p>
 			</div>
