Changes --secondary to --primary  🐿 v2.7.0

--- a/src/scss/alert-banner/_alert-banner.scss
+++ b/src/scss/alert-banner/_alert-banner.scss
@@ -34,7 +34,7 @@
 			@include alertBannerAction;
 		}
 
-		&__action--secondary {
+		&__action--primary {
 			@include alertBannerActionSecondary;
 		}
 
