add a marketing (teal) theme  🐿 v2.7.0

--- a/demos/src/alert-banner-build.mustache
+++ b/demos/src/alert-banner-build.mustache
@@ -1,7 +1,8 @@
-<div id="site-navigation">FT HEADER</div>
+<div id="site-navigation" class="header">Dummy header to attatch items</div>
 
-<div class="button">
-	<button class="demo-alert-banner" id="alert-banner-error-button">Error</button>
-	<button class="demo-alert-banner" id="alert-banner-neutral-button">Netural</button>
-	<button class="demo-alert-bannner" id="alert-banner-success-button">Success</button>
+<div id="client-initialised-demo" class="buttons">
+	<button data-type="error">Error</button>
+	<button data-type="neutral">Netural</button>
+	<button data-type="success">Success</button>
+	<button data-type="marketing">Marketing</button>
 </div>
