--- a/main.scss
+++ b/main.scss
@@ -18,6 +18,7 @@
 @import "src/scss/alert-banner/themes/neutral/neutral";
 @import "src/scss/alert-banner/themes/success/success-mixins";
 @import "src/scss/alert-banner/themes/success/success";
+@import "src/scss/alert-banner/themes/marketing/marketing";
 
 @if ($n-alert-banner-is-silent == false) {
 
