use n-ui-foundations  🐿 v2.7.0

--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,5 @@
+@import 'n-ui-foundations/main';
 @import 'o-buttons/main';
-@import 'o-colors/main';
-@import 'o-grid/main';
-@import "o-icons/main";
-@import 'o-typography/main';
-@import 'o-visual-effects/main';
 
 @import "src/scss/color-use-cases";
 @import "src/scss/variables";
