--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,8 @@
-@import 'n-ui-foundations/main';
 @import 'o-buttons/main';
+@import 'o-colors/main';
+@import 'o-grid/main';
+@import "o-icons/main";
+@import 'o-typography/main';
 
 @import "src/scss/color-use-cases";
 @import "src/scss/variables";
