--- a/src/scss/alert-banner/themes/marketing/_marketing.scss
+++ b/src/scss/alert-banner/themes/marketing/_marketing.scss
@@ -1,6 +1,6 @@
 @mixin nAlertBannerMarketingMixins($class) {
-	$tealBackgroundColor: oColorsGetPaletteColor('teal-80');
-	$tealTextColor: oColorsGetPaletteColor('black');
+	$tealBackgroundColor: oColorsByName('teal-80');
+	$tealTextColor: oColorsByName('black');
 
 	.#{$class}--marketing {
 
@@ -13,13 +13,13 @@
 		}
 
 		.#{$class}__button {
-			@include oButtonsCustomTheme('white', 'black', primary);
-			// This is a hack around the fact that custom buttons do not
-			// support buttons with three colours. TODO: add this to o-buttons
-			// https://github.com/Financial-Times/o-buttons/issues/128
-			&:not([disabled]):hover {
-				background-color: oColorsMix('teal-90', 'black', 80);
-			}
+			@include oButtonsContent($opts: (
+				'type': 'primary',
+				'theme': (
+					'color': 'black',
+					'context': 'white'
+				)
+			));
 		}
 
 		.#{$class}__link {
