--- a/demos/src/alert-banner-build.mustache
+++ b/demos/src/alert-banner-build.mustache
@@ -1,8 +1,8 @@
 <div id="site-navigation" class="header">Dummy header to attatch items</div>
 
 <div id="client-initialised-demo" class="buttons">
-	<button data-type="error">Error</button>
-	<button data-type="neutral">Netural</button>
-	<button data-type="success">Success</button>
-	<button data-type="marketing">Marketing</button>
+	<button data-type="error" class="o-buttons o-buttons--secondary">Error</button>
+	<button data-type="neutral" class="o-buttons o-buttons--secondary">Netural</button>
+	<button data-type="success" class="o-buttons o-buttons--secondary">Success</button>
+	<button data-type="marketing" class="o-buttons o-buttons--secondary">Marketing</button>
 </div>
