--- a/src/scss/_color-use-cases.scss
+++ b/src/scss/_color-use-cases.scss
@@ -1,7 +1,12 @@
-// Neutral Styles
-@include oColorsSetUseCase(alert-banner-warning-icon, text, 'white');
-@include oColorsSetUseCase(alert-banner-button, background-neutral, 'white-60');
-@include oColorsSetUseCase(alert-banner-button, text-neutral, 'black');
-@include oColorsSetUseCase(alert-banner-link, background-neutral, 'transparent');
-@include oColorsSetUseCase(alert-banner-link, text-neutral, 'black');
-@include oColorsSetUseCase(alert-banner-warning-icon, background-neutral, 'black');
+@include oColorsSetUseCase('n-alert-banner/warning-icon', (
+	'text': 'white',
+	'background': 'black'
+));
+@include oColorsSetUseCase('n-alert-banner/button', (
+	'text': 'black',
+	'background': 'white-60'
+));
+@include oColorsSetUseCase('n-alert-banner/link', (
+	'text': 'black',
+	'background': 'transparent'
+));
