Use n-ui-foundations/mixins 🐿 v2.12.5

--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,5 @@
+@import "n-ui-foundations/mixins";
 @import 'o-buttons/main';
-@import 'o-colors/main';
-@import 'o-grid/main';
-@import "o-icons/main";
-@import 'o-typography/main';
 
 @import "src/scss/color-use-cases";
 @import "src/scss/variables";
